--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Data::Pack - Pack data structures so only real content remains
 
 VERSION
-    version 1.100850
+    version 1.101610
 
 SYNOPSIS
         use Data::Pack ':all';
@@ -29,6 +29,7 @@ SYNOPSIS
         };
 
         my $p = pack_data($h);
+        my %h2 = pack_hash(%$h);
 
     The result is
 
@@ -58,6 +59,19 @@ FUNCTIONS
     leaves are all undefined or empty, is omitted. See the Synopsis for an
     example.
 
+    In list context, hashes and arrays are returned as such. In scalar
+    context, references are returned.
+
+  pack_hash
+    This convenience function can be passed a hash instead of a reference.
+    It returns the packed hash in list context, or a reference to it in
+    scalar context.
+
+  pack_array
+    This convenience function can be passed an array instead of a reference.
+    It returns the packed array in list context, or a reference to it in
+    scalar context.
+
   has_content
     This is really just a convenience function used by "data_pack()", but
     can still be exported.
@@ -80,7 +94,7 @@ BUGS AND LIMITATIONS
     No bugs have been reported.
 
     Please report any bugs or feature requests through the web interface at
-    <http://rt.cpan.org/Public/Dist/Display.html?Name=Data-Pack>.
+    <http://rt.cpan.org>.
 
 AVAILABILITY
     The latest version of this module is available from the Comprehensive
